--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,35 +9,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.louisgeek.louisprogessbar.MainActivity">
 
+<!--
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:progress="0"
         app:text_border_isshow="false"
         />
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:progress="2"
         app:text_border_isshow="false"
         android:indeterminate="false"
         />
+-->
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:progress="50"
         app:text_color="#000000"
         app:left_color="#169711"
-        app:text_border_size="10dp"
         app:right_color="#1a36be"
         />
-    <com.louisgeek.louisprogessbar.MyProgessBar
+  <!--  <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:text_border_size="10dp"
         app:text_border_isshow="false"
         android:progress="98"
@@ -45,10 +46,49 @@
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:text_border_size="0dp"
+        app:text_border_color="#169711"
         android:progress="100"
         app:text_border_isshow="true"
         />
+
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:progress="2"
+        app:radius="20dp"
+        android:layout_height="wrap_content"/>
+
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:progress="50"
+        android:layout_height="wrap_content"
+        app:text_color="#000000"
+        app:left_color="#169711"
+        app:text_border_size="2dp"
+        app:right_color="#1a36be"
+        />
+
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:progress="98"
+        app:left_height="5dp"
+        app:right_height="10dp"
+        app:right_color="#1a36be"
+        android:layout_height="wrap_content"/>
+
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:progress="100"
+        android:layout_height="wrap_content"/>-->
 
 </LinearLayout>
