--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -24,4 +24,8 @@
         <attr name="right_height"></attr>
         <attr name="right_color"></attr>
     </declare-styleable>
+
+    <declare-styleable name="MyRoundProgressBarAttrs">
+        <attr name="radius" format="dimension"></attr>
+    </declare-styleable>
 </resources>
