--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.louisgeek.louisprogessbar.MainActivity">
 
-<!--
+
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,9 +23,8 @@
         android:layout_marginTop="10dp"
         android:progress="2"
         app:text_border_isshow="false"
-        android:indeterminate="false"
         />
--->
+
     <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +34,7 @@
         app:left_color="#169711"
         app:right_color="#1a36be"
         />
-  <!--  <com.louisgeek.louisprogessbar.MyProgessBar
+  <com.louisgeek.louisprogessbar.MyProgessBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -68,6 +67,12 @@
     <com.louisgeek.louisprogessbar.MyRoundProgessBar
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
+        android:progress="30"
+        app:radius="20dp"
+        android:layout_height="wrap_content"/>
+    <com.louisgeek.louisprogessbar.MyRoundProgessBar
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
         android:progress="50"
         android:layout_height="wrap_content"
         app:text_color="#000000"
@@ -89,6 +94,6 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:progress="100"
-        android:layout_height="wrap_content"/>-->
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
